# bindings_gui

./: Cargo.toml  InstallationLog.txt  LICENSE  flake.nix  wix.json  worse_case_senario.json
.github/workflows/: release.yml  rust-clippy.yml
src/: bindings.rs  component.rs  constants.rs  constants_tab.rs  driver_constants_tab.rs  from_binding.rs  from_commands.rs  global_state.rs  main.rs  manage_commands.rs  manage_controllers.rs  managetab.rs  number_input.rs  password_lock.rs  profiles.rs  search_selector.rs  single_linked_list.rs  streams_tab.rs  sync_thread.rs  syncing.rs
src/main/deploy/: bindings.json
src/main/deploy/bindings/: default.json  landon.json  other.json
src/tabs/: constants.rs  driver_constants.rs  from_bindings.rs  from_commands.rs  manage_commands.rs  manage_controllers.rs  manage_streams.rs  mod.rs  password_lock.rs  profiles.rs  streams.rs  syncing.rs
