[package]
name = "bindings-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
eframe = "0.31.1"
egui = "0.31.1"
egui_dock = "0.16.0"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
