[package]
name = "bindings-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bumpalo = { version = "3.17.0", features = ["collections"] }
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
eframe = "0.31.1"
egui = "0.31.1"
egui-toast = "0.17.0"
egui_autocomplete = "10.1.0"
egui_dock = "0.16.0"
egui_hooks = "0.8.0"
futures = "0.3.31"
once_cell = "1.21.3"
pom = "3.4.0"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
smol = "2.0.2"
winit = "0.30.10"
